# src/main/java/com/nelsontr/paymentapp/dto/WebhookRequestDto.java
@@ -1,0 +1,10 @@
+package com.nelsontr.paymentapp.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.Data;
+
+@Data
+public class WebhookRequestDto {
+    @NotBlank
+    private String url;
+}
