# src/main/java/com/nelsontr/paymentapp/dto/WebhookResponseDto.java
@@ -1,0 +1,9 @@
+package com.nelsontr.paymentapp.dto;
+
+import lombok.Data;
+
+@Data
+public class WebhookResponseDto {
+    private Long id;
+    private String url;
+}
